[gd_scene load_steps=8 format=3 uid="uid://ccp3datnll86g"]

[ext_resource type="Texture2D" uid="uid://dmjgp6l4xetfx" path="res://bubble.png" id="1_7u7xl"]
[ext_resource type="FontFile" uid="uid://drm8ab63ifxro" path="res://Kenney Bold.ttf" id="1_dq2cu"]
[ext_resource type="Script" path="res://mainmenu.gd" id="1_k6jxe"]
[ext_resource type="AudioStream" uid="uid://cmk53gk5tpr7n" path="res://select.wav" id="3_c0sly"]
[ext_resource type="AudioStream" uid="uid://by1b5e6537lca" path="res://menu.wav" id="4_fgm85"]

[sub_resource type="LabelSettings" id="LabelSettings_tjj11"]
font = ExtResource("1_dq2cu")
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_l7rso"]
font = ExtResource("1_dq2cu")
font_size = 30

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_k6jxe")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -13.0
offset_top = -5.0
offset_right = 1305.0
offset_bottom = 738.0
color = Color(0, 0, 0, 1)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(629, 757)
amount = 35
lifetime = 8.0
lifetime_randomness = 0.5
texture = ExtResource("1_7u7xl")
emission_shape = 3
emission_rect_extents = Vector2(700, 1)
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0

[node name="name" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -577.0
offset_right = 578.0
offset_bottom = 263.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Witch survivors "
label_settings = SubResource("LabelSettings_tjj11")
horizontal_alignment = 1
vertical_alignment = 1

[node name="start_button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -27.0
offset_right = 210.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="start_button"]
layout_mode = 1
offset_left = -70.0
offset_right = 506.0
offset_bottom = 56.0
size_flags_horizontal = 0
text = "start game "
label_settings = SubResource("LabelSettings_l7rso")
horizontal_alignment = 1

[node name="select_sound" type="AudioStreamPlayer" parent="start_button"]
stream = ExtResource("3_c0sly")

[node name="hover_sound" type="AudioStreamPlayer" parent="start_button"]
stream = ExtResource("4_fgm85")

[node name="quit_button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 62.0
offset_right = 152.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label4" type="Label" parent="quit_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.5
offset_top = -22.5
offset_right = 292.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "quit  "
label_settings = SubResource("LabelSettings_l7rso")
horizontal_alignment = 1

[node name="select_sound" type="AudioStreamPlayer" parent="quit_button"]
stream = ExtResource("3_c0sly")

[node name="hover_sound" type="AudioStreamPlayer" parent="quit_button"]
stream = ExtResource("4_fgm85")

[connection signal="mouse_entered" from="start_button" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="quit_button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
